--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 erl_crash.dump
 *.ez
 /.elixir__ls
-\.elixir_ls/build/test/lib/app_twitter/\.mix/compile\.elixir
+/AppTwitter
+/config
+\.elixir_ls/
